HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuSafeTypeDiagnostic/Source/Main.uv
//! Rejected structured-parallelism specimen for prohibited GPU-safe types.

public procedure gpuSafeTypeDiagnosticReference(context: Context) -> i32 {
    return parallel context~>gpu() {
        context
        0
    }
}
